# trifecta-plus

./: changelog.md  trifecta-plus.cabal
src/: TrifectaPlus.hs
