-- The name of the package.
name:                trifecta-plus

-- The package version.  See the Haskell package versioning policy (PVP)
-- for standards guiding when and how versions should be incremented.
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.0.1.0

-- A short (one-line) description of the package.
synopsis:            additional tools for working with Trifecta

-- A longer description of the package.
description:         additional tools for working with Trifecta

-- The license under which the package is released.
license:             MIT

-- The file containing the license text.
license-file:        LICENSE

-- The package author(s).
author:              Martyn J. Pearce

-- An email address to which users can send suggestions, bug reports, and
-- patches.
maintainer:          haskell@sixears.com

-- A copyright notice.
-- copyright:

-- category:

build-type:          Simple

-- Extra files to be distributed with the package, such as examples or a
-- README.
-- extra-source-files:

-- Constraint on the version of Cabal needed to build this package.
cabal-version:       >=1.10


library
  ghc-options:        -W -Wall -fhelpful-errors
  -- Modules exported by the library.
  exposed-modules:     TrifectaPlus

  -- modules included in this library but not exported.
  other-modules:

  default-extensions: FlexibleContexts
                    , FlexibleInstances
                    , NoImplicitPrelude
                    , NumericUnderscores
                    , OverloadedStrings
                    , QuasiQuotes
                    , RankNTypes
                    , TemplateHaskell
                    , TypeApplications
                    , UnicodeSyntax

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:

  -- Other library packages from which modules are imported.
  build-depends:       bytestring, parsers, prettyprinter, tasty-hunit
                     , template-haskell, text, trifecta

                     , base1t       >= 0.0.5.36
                     , fpath        >= 1.3.2.39
                     , textual-plus >= 1.1.0.0

  -- Directories containing source files.
  hs-source-dirs:      src

  -- Base language which the package is written in.
  default-language:    Haskell2010

-------------------------------------------------------------------------------
